[project]
name = "traveller-agent"
version = "0.1.0"
description = "A multi-agent coordinator system for travel planning using LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "tiktoken>=0.12.0",
]
